# LB8

./: CMakeLists.txt  array_utils.cpp  file_utils.cpp  funcs.cpp  head.h  input.cpp  logic.cpp  main  main.cpp  output.cpp  search_sort.cpp  string_utils.cpp  struct_input.cpp  task1.cpp  task2.cpp
Task_1/header-files/: array_utils.h  file_utils.h  logic.h  output.h  search_sort.h  string_utils.h  struct_input.h  task1.h
Task_1/src/: array_utils.cpp  file_utils.cpp  logic.cpp  output.cpp  search_sort.cpp  string_utils.cpp  struct_input.cpp  task1.cpp
Task_2/header-files/: array_utils.h  file_utils.h  funcs.h  logic.h  output.h  search_sort.h  string_utils.h  struct_input.h  task2.h
Task_2/src/: array_utils.cpp  file_utils.cpp  funcs.cpp  logic.cpp  output.cpp  search_sort.cpp  string_utils.cpp  struct_input.cpp  task2.cpp
general/header-files/: constants.h  funcs.h
general/src/: funcs.cpp
tests/: funcs.cpp  head.h
